2022-02-17  Patrick Guio <p.guio@ucl.ac.uk>

	* data/downloadGenericKernels.sh, data/saturn.tm.in,
	  data/uranus.tm.in:
	  Updated to latest Saturn and Uranus satellites ephemeris.

2022-02-14  Patrick Guio <p.guio@ucl.ac.uk>

	* matlab/DSKMice02.m[DEAD], matlab/DSKMiceUser.m[DEAD],
	  matlab/DSKtol.m[DEAD]:
	  Removed as not part of N0067 version.

2022-02-14  Patrick Guio <p.guio@ucl.ac.uk>

	* whats.new, matlab/MiceDAS.m, matlab/MiceDLA.m, matlab/MiceDSK.m,
	  matlab/MiceDtl.m, matlab/MiceFrm.m, matlab/MiceGF.m,
	  matlab/MiceOccult.m, matlab/MiceOsc.m, matlab/MiceUser.m,
	  matlab/cspice_axisar.m, matlab/cspice_azlcpo.m,
	  matlab/cspice_azlrec.m, matlab/cspice_b1900.m,
	  matlab/cspice_b1950.m, matlab/cspice_badkpv.m,
	  matlab/cspice_bltfrm.m, matlab/cspice_bodc2n.m,
	  matlab/cspice_bodc2s.m, matlab/cspice_boddef.m,
	  matlab/cspice_bodfnd.m, matlab/cspice_bodn2c.m,
	  matlab/cspice_bods2c.m, matlab/cspice_bodvcd.m,
	  matlab/cspice_bodvrd.m, matlab/cspice_ccifrm.m,
	  matlab/cspice_cgv2el.m, matlab/cspice_chbder.m,
	  matlab/cspice_chbigr.m, matlab/cspice_chbint.m,
	  matlab/cspice_chbval.m, matlab/cspice_cidfrm.m,
	  matlab/cspice_ckcls.m, matlab/cspice_ckcov.m,
	  matlab/cspice_ckfrot.m, matlab/cspice_ckfxfm.m,
	  matlab/cspice_ckgp.m, matlab/cspice_ckgpav.m,
	  matlab/cspice_ckgr02.m, matlab/cspice_ckgr03.m,
	  matlab/cspice_cklpf.m, matlab/cspice_ckmeta.m,
	  matlab/cspice_cknr02.m, matlab/cspice_cknr03.m,
	  matlab/cspice_ckobj.m, matlab/cspice_ckopn.m,
	  matlab/cspice_ckupf.m, matlab/cspice_ckw01.m,
	  matlab/cspice_ckw02.m, matlab/cspice_ckw03.m,
	  matlab/cspice_clight.m, matlab/cspice_clpool.m,
	  matlab/cspice_cnmfrm.m, matlab/cspice_conics.m,
	  matlab/cspice_convrt.m, matlab/cspice_cyllat.m,
	  matlab/cspice_cylrec.m, matlab/cspice_cylsph.m,
	  matlab/cspice_dafac.m, matlab/cspice_dafbbs.m,
	  matlab/cspice_dafbfs.m, matlab/cspice_dafcls.m,
	  matlab/cspice_dafcs.m, matlab/cspice_dafdc.m,
	  matlab/cspice_dafec.m, matlab/cspice_daffna.m,