@@ -1,6 +1,6 @@
 \begintext 
 --------------------------------------------------------
-  $Id: standard.tm.in,v 1.3 2021/03/25 11:36:03 patrick Exp $
+  $Id: standard.tm.in,v 1.4 2022/12/29 10:38:05 patrick Exp $
 
   Copyright (c) 2015 Patrick Guio <patrick.guio@gmail.com>
   All Rights Reserved.
@@ -43,7 +43,7 @@
 
         'DATAROOT/naif0012.tls',
         'DATAROOT/de440.bsp',
-        'DATAROOT/pck00010.tpc'
+        'DATAROOT/pck00011.tpc'
 
          )
 
